# AxxSolder

.github/workflows/: build-release.yaml
AxxSolder_firmware/: CMakeLists.txt  Containerfile
AxxSolder_firmware/Core/Src/: buzzer.c
